@@ -3,6 +3,7 @@ Version 2024.xxxxx (xxxxx 2024)
 - Implemented: dzVents, Added historical data helper 'med' to calculate the median value
 - Implemented: Enever, Added Budget Energy and Eneco
 - Implemented: Enphase, Option for more Inverter details (ac/dc voltage, temperature, lastupdate)
+- Implemented: Enphase, Live storage data
 - Implemented: Energy Dashboard
 - Implemented: Event Editor, storing/loading opened events
 - Implemented: Hour chart for P1 log
